<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ngay_thang"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/trang_thai"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:weightSum="3" >

    <ImageView
        android:id="@+id/img_status"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_100"
        android:layout_weight="1"
        android:src="@drawable/sunny" />

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/max_temp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/min_temp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>