<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context="com.taidev198.weatherapplication.home.HomeFragment">

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/test_location"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_arrow_down"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintStart_toEndOf="@id/tv_location"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_current_weather"
        android:layout_width="@dimen/image_weather_size"
        android:layout_height="@dimen/image_weather_size"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:src="@drawable/xxxsunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="@dimen/display_size"
        android:layout_height="@dimen/display_size"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/color_background_display_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_current_weather">

        <TextView
            android:id="@+id/tv_current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/test_current_day"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/test_current_temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_60"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_day" />

        <TextView
            android:id="@+id/tv_current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_current_text"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_temperature" />

        <ImageView
            android:id="@+id/ic_wind"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/dp_4"
            android:src="@drawable/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <ImageView
            android:id="@+id/ic_wind1"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/dp_4"
            android:contentDescription="@string/app_name"
            android:src="@drawable/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:padding="@dimen/padding_micro"
            android:text="@string/wind_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/ic_wind"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_percent_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_48"
            android:padding="@dimen/padding_micro"
            android:text="@string/percent_cloud"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="ic_humidity1"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/dp_4"
            android:padding="@dimen/padding_micro"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_percent_cloud"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_48"
            android:padding="@dimen/padding_micro"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_percent_cloud"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_current_percent_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:padding="@dimen/padding_micro"
            android:text="@string/test_current_wind_speed"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tv_line_1"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_current_percent_cloud1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_48"
            android:padding="@dimen/padding_micro"
            android:text="@string/test_current_wind_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_line_1"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_wind_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:padding="@dimen/padding_micro"
            android:text="@string/speed_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_current_percent_cloud"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_text" />

        <TextView
            android:id="@+id/tv_wind_speed1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_48"
            android:padding="@dimen/padding_micro"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_current_percent_cloud"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <ImageView
            android:id="@+id/ic_humidity2"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_humidity1"/>

        <ImageView
            android:id="@+id/ic_humidity1"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:padding="@dimen/padding_micro"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/ic_humidity2"
            app:layout_constraintTop_toBottomOf="@id/tv_percent_cloud" />

        <TextView
            android:id="@+id/tv_line_3"
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_136"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_percent_cloud"
            app:layout_constraintTop_toBottomOf="@id/tv_current_temperature" />

        <TextView
            android:id="@+id/tv_current_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/test_current_humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_line_2"
            app:layout_constraintTop_toBottomOf="@id/tv_current_percent_cloud1" />

        <TextView
            android:id="@+id/tv_humidity_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_92"
            android:text="@string/humidity_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/tv_current_percent_cloud"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_56"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/dp_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_add_favourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/heart_icon"
            android:padding="@dimen/dp_8"
            android:src="@drawable/ic_heart" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>