<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_8"
    android:layout_marginBottom="@dimen/dp_6"
    app:cardBackgroundColor="@color/blue"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_12">

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btn_heart"
            android:gravity="start"
            android:text="@string/ha_noi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_city_name"
            android:layout_alignStart="@id/tv_city_name"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start"
            android:text="@string/viet_nam"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14" />

        <ImageButton
            android:id="@+id/btn_heart"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/heart_icon"
            android:padding="@dimen/dp_8"
            android:src="@drawable/ic_heart" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>