<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_home_screen"
    tools:context="com.taidev198.weatherapplication.screen.detail.DetailFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_home_screen"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/back"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forecast_detail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8" >

        <TextView
            android:id="@+id/tv_day_forecast"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dp_10"
            android:gravity="start"
            android:text="@string/today"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_hourly"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/bg_home_screen" />

    <TextView
        android:id="@+id/tv_weekly_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:gravity="end"
        android:layout_marginEnd="@dimen/sp_18"
        android:text="@string/weekly_forecast"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_daily"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@drawable/bg_home_screen" />


</LinearLayout>